# feature_c-

./: CMakeLists.txt  readme.md
c++14/: CMakeLists.txt
c++17/: CMakeLists.txt  c17_any.cpp  c17_apply.cpp  c17_chars.cpp  c17_duration.cpp  c17_filesystem.cpp  c17_fold_expressions.cpp  c17_inline_variable.cpp  c17_optional.cpp  c17_string_view.cpp  c17_structured_bindings.cpp  c17_test.cpp  c17_variant.cpp  readme.md
c++20/: CMakeLists.txt  c20_format.cpp  c20_jthread.cpp  c20_ranges.cpp
c++20/concepts/: CMakeLists.txt  c20_concepts_test.cpp
c++20/coroutine/: CMakeLists.txt  c20_co_counter.cpp  c20_co_fibo.cpp  c20_co_hello.cpp  c20_co_test.cpp
c++20/modules/: a.out  main.cpp  testa.cpp
c++20/modules/gcm.cache/: testa.gcm
c++20/ranges/: CMakeLists.txt  c20_ranges_test.cpp
