set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pipe -fPIC -g")
add_executable(c17_test c17_test.cpp)
add_executable(c17_structured_bindings c17_structured_bindings.cpp)
add_executable(c17_inline_variable c17_inline_variable.cpp)
add_executable(c17_fold_expressions c17_fold_expressions.cpp)
add_executable(c17_chars c17_chars.cpp)
add_executable(c17_variant c17_variant.cpp)
add_executable(c17_optional c17_optional.cpp)
add_executable(c17_any c17_any.cpp)
add_executable(c17_apply c17_apply.cpp)
add_executable(c17_filesystem c17_filesystem.cpp)
add_executable(c17_duration c17_duration.cpp)
add_executable(c17_string_view c17_string_view.cpp)